# Get_jobs

./: README.md  abstract_class.py  analyse_data.py  config.py  data_parser.py  get_data.py  main.py  pyproject.toml  superjobs_code.html  user_actions.py
get_api/: heah_hunters_api.py  hh_tokens.txt  superjobs_api.py  superjobs_code.html  superjobs_code.txt  superjobs_tokens.txt
text_files/: job_search.json  python.json  sj.txt  Репетитор_гитары
