[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["nvdovin <n1cki@bk.tu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.30.0"
lxml = "^4.9.2"
bs4 = "^0.0.1"
fake-useragent = "^1.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
